Change layout and title in index.html
Updated the layout and title for the index page, replacing the home layout with a page layout and changing the title to 'About'. Removed the introductory section and included a reference to an about markdown file.

Signed-off-by: JaneS1028 <janeshin@kaist.ac.kr>

--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
 ---
-layout: home
-title: Home
-# Index page
+layout: page
+title: "About"
+permalink: /
 ---
 
-<!-- Intro above the post cards -->
-<div class="home-intro">
-  <h1>Hi, I'm <strong>Jane Shin</strong> 👋</h1>
-  <p>
-    KAIST Information Systems M.S. student (’26 Feb).  
-    관심사는 data-driven decision making, HIE, and technical writing.
-  </p>
-  <p>
-    <a class="btn" href="/about/">About</a>
-    <a class="btn" href="https://www.linkedin.com/in/jane-shin-9ba713218/" target="_blank" rel="noopener">LinkedIn</a>
-    <a class="btn" href="mailto:janeshin@kaist.ac.kr">Email</a>
-  </p>
-</div>
+{% include_relative _tabs/about.md %}
