Modify index.html for home layout and content
Updated the title to 'Home' and added a hero section with personal introduction and links.

Signed-off-by: JaneS1028 <janeshin@kaist.ac.kr>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 ---
 layout: page
-title: "About"
+title: "Home"
 permalink: /
 ---
 
-{% include_relative _tabs/about.md %}
+<!-- 여기는 자유롭게 마크다운/HTML로 작성 -->
+<div class="home-hero">
+  <img src="/assets/img/pic.jpg" alt="Jane Shin" class="hero-photo">
+  <div>
+    <h1>Hi, I'm <strong>Jane Shin</strong> 👋</h1>
+    <p>
+      M.S. Candidate in Information Systems at <strong>KAIST</strong>.<br/>
+      Interests: Human–Information Interaction, data-driven research, digital platforms.
+    </p>
+    <p>
+      <a class="btn" href="/about/">About</a>
+      <a class="btn" href="mailto:janeshin@kaist.ac.kr">Email</a>
+      <a class="btn" href="https://www.linkedin.com/in/jane-shin-9ba713218/" target="_blank" rel="noopener">LinkedIn</a>
+    </p>
+  </div>
+</div>
+
+## Education / Research / Presentations
+- 간단 소개 또는 각 탭/포스트로 가는 링크를 여기에 배치해도 좋아요.
