Revise introduction and remove hero image
Updated personal introduction and removed an image.

Signed-off-by: JaneS1028 <janeshin@kaist.ac.kr>

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@ permalink: /
 
 <!-- 여기는 자유롭게 마크다운/HTML로 작성 -->
 <div class="home-hero">
-  <img src="/assets/img/pic.jpg" alt="Jane Shin" class="hero-photo">
   <div>
     <h1>Hi, I'm <strong>Jane Shin</strong> 👋</h1>
     <p>
-      M.S. Candidate in Information Systems at <strong>KAIST</strong>.<br/>
-      Interests: Human–Information Interaction, data-driven research, digital platforms.
+      I am a master’s student in Management Engineering at KAIST, advised by Professor Wonseok Oh. I recently completed a visiting program at Carnegie Mellon University’s AI Intensive Program. My research interests lie in the Economics of IT, AI Governance, and Privacy.
     </p>
     <p>
-      <a class="btn" href="/about/">About</a>
       <a class="btn" href="mailto:janeshin@kaist.ac.kr">Email</a>
       <a class="btn" href="https://www.linkedin.com/in/jane-shin-9ba713218/" target="_blank" rel="noopener">LinkedIn</a>
     </p>
