Change page title and heading level in index.html
Signed-off-by: JaneS1028 <janeshin@kaist.ac.kr>

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: "Home"
+title: "About"
 permalink: /
 ---
 
 <!-- 여기는 자유롭게 마크다운/HTML로 작성 -->
 <div class="home-hero">
   <div>
-    <h1>Hi, I'm <strong>Jane Shin</strong> 👋</h1>
+    <h3>Hello, I'm <strong>Jane Shin</strong> 👋</h3>
     <p>
       I am a master’s student in Management Engineering at KAIST, advised by Professor Wonseok Oh. I recently completed a visiting program at Carnegie Mellon University’s AI Intensive Program. My research interests lie in the Economics of IT, AI Governance, and Privacy.
     </p>
