Revise introduction and add education section
Updated personal introduction and added education details.

Signed-off-by: JaneS1028 <janeshin@kaist.ac.kr>

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ title: "About"
 permalink: /
 ---
 
-<!-- 여기는 자유롭게 마크다운/HTML로 작성 -->
 <div class="home-hero">
   <div>
-    <h3>Hello, I'm <strong>Jane Shin</strong> 👋</h3>
     <p>
-      I am a master’s student in Management Engineering at KAIST, advised by Professor Wonseok Oh. I recently completed a visiting program at Carnegie Mellon University’s AI Intensive Program. My research interests lie in the Economics of IT, AI Governance, and Privacy.
+      I am a master’s student in Management Engineering at <strong>KAIST</strong>, advised by Professor Wonseok Oh. 
+      I recently completed a visiting program at <strong>Carnegie Mellon University’s AI Intensive Program</strong>. 
+      My research interests lie in the <strong>Economics of IT</strong>, <strong>AI Governance</strong>, and <strong>Privacy</strong>.
     </p>
     <p>
       <a class="btn" href="mailto:janeshin@kaist.ac.kr">Email</a>
@@ -18,5 +18,22 @@ permalink: /
   </div>
 </div>
 
-## Education / Research / Presentations
-- 간단 소개 또는 각 탭/포스트로 가는 링크를 여기에 배치해도 좋아요.
+---
+
+## 🎓 Education
+
+**KAIST College of Business**, Seoul, South Korea  
+_M.S. in Management Engineering_ (Expected Graduation: Feb 2026)  
+**Advisor:** Professor Wonseok Oh  
+**Feb 2024 – Present**
+
+**Carnegie Mellon University**, Pittsburgh, United States  
+_AI Intensive Program, Visiting Scholar_  
+School of Computer Science, Software and Societal Systems Department (S3D)  
+**Jan 2025 – Jul 2025**
+
+**Korea University**, Seoul, South Korea  
+_B.A. in Business Administration_  
+Interdisciplinary Major in Brain and Cognitive Science  
+**GPA:** 4.24 / 4.5  
+**Mar 2019 – Aug 2023**
